gts-macros/tests/compile_fail/instance_id_not_literal.stderr
error: `id:` must be a string literal containing the full GTS instance id (e.g. "gts.acme.core.events.topic.v1~vendor.app.x.v1") or the prefix-less marker `gts_id!("...")`
  --> tests/compile_fail/instance_id_not_literal.rs:24:13
   |
24 |         id: runtime_id,
   |             ^^^^^^^^^^
